--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^21.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flags-select": "^2.1.2",
     "react-i18next": "^11.13.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-bootstrap": "^2.0.2"
   }
 }
