--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "i18next": "^21.4.0",
+    "enzyme": "^3.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flags-select": "^2.1.2",
-    "react-i18next": "^11.13.0",
+    "react-redux": "^7.2.6",
+    "react-redux-i18n": "^1.9.3",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.0",
     "sass": "^1.43.4",
     "web-vitals": "^1.1.2"
   },
@@ -48,6 +55,8 @@
     ]
   },
   "devDependencies": {
-    "react-bootstrap": "^2.0.2"
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "react-bootstrap": "^2.0.2",
+    "redux-mock-store": "^1.5.4"
   }
 }
