--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,10 +12,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flags-select": "^2.1.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "reactstrap": "^9.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
