--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^4.2.21",
     "reactstrap": "^9.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
