--- a/package.json
+++ b/package.json
@@ -2,62 +2,23 @@
   "name": "fluxtracker",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@elrondnetwork/erdjs": "^8.0.1-alpha.13",
-    "@splitbee/web": "^0.3.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "enzyme": "^3.11.0",
-    "qrcode.react": "^3.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-flags-select": "^2.1.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-redux-i18n": "^1.9.3",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
-    "react-tooltip": "^4.2.21",
-    "reactstrap": "^9.0.0",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.0",
-    "sass": "^1.43.4",
-    "web-vitals": "^1.1.2"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "serve -s build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.0.3"
   },
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "react-bootstrap": "^2.0.2",
-    "redux-mock-store": "^1.5.4"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3"
   }
 }
